test: Refactor tests for CategoryService and PostService